package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//copts:configure_copts.bzl", "QIAN_DEFAULT_COPTS", "QIAN_DEFAULT_LINKOPTS")

cc_library(
    name = "qian",
    hdrs = glob([
      "type.h",
      "object.h",
      "scanner.h"
     ]),
    srcs = glob([
      "scanner.cc"
    ]),
    copts = QIAN_DEFAULT_COPTS,
    deps = [
      "//qian/stl:stl",
      "@com_github_google_glog//:glog"
    ]
)

cc_test(
    name = "type_test",
    srcs = ["type_test.cc"],
    copts = QIAN_DEFAULT_COPTS,
    deps = [
        ":qian",
        "//qian/stl:stl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "scanner_test",
    srcs = ["scanner_test.cc"],
    copts = QIAN_DEFAULT_COPTS,
    deps = [
        ":qian",
        "//qian/stl:stl",
        "@com_google_googletest//:gtest_main",
        "@com_github_google_glog//:glog"
    ],
)
