package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//copts:configure_copts.bzl", "QIAN_DEFAULT_COPTS", "QIAN_DEFAULT_LINKOPTS")

cc_library(
    name = "stl",
    hdrs = glob([ "*.h" ]),
)

cc_test(
    name = "vector_test",
    srcs = ["vector_test.cc"],
    copts = QIAN_DEFAULT_COPTS,
    deps = [
        ":stl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "stack_test",
    srcs = ["stack_test.cc"],
    copts = QIAN_DEFAULT_COPTS,
    deps = [
        ":stl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "list_test",
    srcs = ["list_test.cc"],
    copts = QIAN_DEFAULT_COPTS,
    deps = [
        ":stl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "hash_table_test",
    srcs = ["hash_table_test.cc"],
    copts = QIAN_DEFAULT_COPTS,
    deps = [
        ":stl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "memory_test",
    srcs = ["memory_test.cc"],
    copts = QIAN_DEFAULT_COPTS,
    deps = [
        ":stl",
        "@com_google_googletest//:gtest_main",
    ],
)
